[package]
name = "sqew"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.99"
thiserror = "2.0.16"
clap = { version = "4.5.47", features = ["derive"] }
